First version combining Fritz2 and d3js

--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html>
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
+    <title>Fritz2 and d3js</title>
 </head>
 <body id="target">
 Loading...
-<script src="fritz2-template.js"></script>
+<script src="f2kd3.js"></script>
 </body>
 </html>
