Simple-Example as example2 added

--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>Fritz2 and d3js</title>
+    <title>Fritz2 und d3js</title>
 </head>
-<body id="target">
-Loading...
-<script src="f2kd3.js"></script>
+<body>
+    <div><a href="./example1.html" target="_blank">Beispiel 1</a></div>
+    <div><a href="./example2.html" target="_blank">Beispiel 2</a></div>
 </body>
+
 </html>
