--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -8,6 +8,7 @@
 <body>
     <div><a href="./example1.html" target="_blank">Beispiel 1</a></div>
     <div><a href="./example2.html" target="_blank">Beispiel 2</a></div>
+    <div><a href="./example3.html" target="_blank">Beispiel 3</a></div>
 </body>
 
 </html>
