template and example5 added as preparation

--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -10,6 +10,11 @@
     <div><a href="./example2.html" target="_blank">Beispiel 2</a></div>
     <div><a href="./example3.html" target="_blank">Beispiel 3</a></div>
     <div><a href="./example4.html" target="_blank">Beispiel 4</a></div>
+    <div><a href="./example5.html" target="_blank">Beispiel 5</a></div>
+
+
+    <div><a href="./template.html" target="_blank">Template</a></div>
+
 </body>
 
 </html>
