template and example5 added as preparation

--- a/src/jsMain/resources/example5.html
+++ b/src/jsMain/resources/example5.html
@@ -9,7 +9,7 @@
 <body>
 <div id="example5"> </div>
 <!--svg id="beispiel3" width="600" height="300" style="background: lightgreen"></svg-->
-<svg id="beispiel5" width="600" height="300" ></svg>
+<!--svg id="beispiel5" width="600" height="300" ></svg-->
 </body>
 <script src="f2kd3.js"></script>
 </html>
