general actualisation pattern implementation running without comment

--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -11,7 +11,8 @@
     <div><a href="./example3.html" target="_blank">Beispiel 3</a></div>
     <div><a href="./example4.html" target="_blank">Beispiel 4</a></div>
     <div><a href="./example5.html" target="_blank">Beispiel 5</a></div>
-    <div><a href="./selections-and-bindings/updateWithKey.html" target="_blank">Update with key-Beispiel</a></div>
+    <div><a href="./selections_and_bindings/updateWithKey.html" target="_blank">Update with key-Beispiel</a></div>
+    <div><a href="./selections_and_bindings/generalActualisationPattern.html" target="_blank">general actualisation pattern - Beispiel</a></div>
 
     <div><a href="./template.html" target="_blank">Template</a></div>
 
