--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -13,6 +13,7 @@
     <div><a href="./example5.html" target="_blank">Beispiel 5</a></div>
     <div><a href="./selections_and_bindings/updateWithKey.html" target="_blank">Update with key-Beispiel</a></div>
     <div><a href="./selections_and_bindings/generalActualisationPattern.html" target="_blank">general actualisation pattern - Beispiel</a></div>
+    <div><a href="./selections_and_bindings/insertAndSort.html" target="_blank">insert and sort - Beispiel</a></div>
 
     <div><a href="./template.html" target="_blank">Template</a></div>
 
