insertAndSort working and commented

--- a/src/jsMain/resources/selections_and_bindings/insertAndSort.html
+++ b/src/jsMain/resources/selections_and_bindings/insertAndSort.html
@@ -9,7 +9,7 @@
 <body>
 <div id="insertAndSort"> </div>
 <!--svg id="beispiel3" width="600" height="300" style="background: lightgreen"></svg-->
-<svg id="insertAndSortSvg" width="600" height="300" ></svg>
+<ul id="insertAndSortSvg" width="600" height="300" ></ul>
 </body>
 <script src="../f2kd3.js"></script>
 </html>
