drag and drop template running

--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -17,6 +17,7 @@
     <div><a href="./selections_and_bindings/insertAndSort.html" target="_blank">insert and sort - Beispiel</a></div>
     <p></p>
     <div><a href="./events_interactions_animations/detectCoordinates.html" target="_blank">detect - coordinates - Beispiel</a></div>
+    <div><a href="./events_interactions_animations/dragAndDrop.html" target="_blank">drag - and - drop - Beispiel</a></div>
     <p></p>
     <div><a href="./template.html" target="_blank">Template</a></div>
 
