drag and drop running

--- a/src/jsMain/resources/events_interactions_animations/dragAndDrop.html
+++ b/src/jsMain/resources/events_interactions_animations/dragAndDrop.html
@@ -9,7 +9,11 @@
 <body>
 <div id="dragAndDrop"> </div>
 <!--svg id="beispiel3" width="600" height="300" style="background: lightgreen"></svg-->
-<svg id="dragAndDropSvg" width="600" height="300" ></svg>
+<svg id="dragAndDropSvg" width="600" height="200" >
+    <circle cx ="100" cy="100" r="20" fill="red"></circle>
+    <circle cx ="300" cy="100" r="20" fill="green"></circle>
+    <circle cx ="500" cy="100" r="20" fill="blue"></circle>
+</svg>
 </body>
 <script src="../f2kd3.js"></script>
 </html>
