--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -18,6 +18,8 @@
     <p></p>
     <div><a href="./events_interactions_animations/detectCoordinates.html" target="_blank">detect - coordinates - Beispiel</a></div>
     <div><a href="./events_interactions_animations/dragAndDrop.html" target="_blank">drag - and - drop - Beispiel</a></div>
+    <div><a href="./events_interactions_animations/stagger.html" target="_blank">stagger - Beispiel</a></div>
+
     <p></p>
     <div><a href="./template.html" target="_blank">Template</a></div>
 
